--- a/loss_calibrated/simple_example.ipynb
+++ b/loss_calibrated/simple_example.ipynb
@@ -272,6 +272,7 @@
     "\n",
     "### The plugin-estimator way ###\n",
     "def get_plugin_decisions(x):\n",
+    "    ''' TODO: add support for different threshold '''\n",
     "    y_post = get_posterior(x)\n",
     "    return np.argmax(np.column_stack((1.0-y_post, y_post)), axis=1)\n",
     "    \n",
@@ -338,10 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As one can see, the decisions are fairly comparable. \n",
-    "* How can we measure that one is better than the other?\n",
-    "* Generate a test sample from the same model, and compute the loss. Yes, that should be my next step.\n",
-    "* Try a different example---maybe that will give me a better insight/picture."
+    "As one can see, the decisions are fairly comparable. "
    ]
   },
   {
